--- a/workload.yaml
+++ b/workload.yaml
@@ -2,11 +2,10 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: tanzu-java-web-app
-  replicas: 1
   labels:
     apps.tanzu.vmware.com/workload-type: web
-    apps.tanzu.vmware.com/has-tests: "true"
-    apps.tanzu.vmware.com/auto-configure-actuators: "true"
+    apps.tanzu.vmware.com/has-tests: "false"
+    apps.tanzu.vmware.com/auto-configure-actuators: "false"
     app.kubernetes.io/part-of: tanzu-java-web-app
     workload-type: pre-built
 spec:
